2007-04-25  Benoit Gréoire  <bock@step.polymtl.ca>
        * ShoutBox.php:  The shout form wasn't displayed whent there weren't any Shouts yet, doh!

2007-04-24 Benoit Grégoire  <bock@step.polymtl.ca>
	* AuthenticatorRadius.php:  Fix RADIUS dependency detection bug related to case sensitivity

2007-04-19  Benoit Grégoire  <bock@step.polymtl.ca>
	* RssAggregator.php:  Fix bug saving the max item age. 
	* Forgot to remove a bunch of links to faq.php.
	
2007-04-03 Benoit Grégoire  <bock@step.polymtl.ca>
	* AnonymisedDataExport.php:  New report.  Adds the ability to export anonymised SQL data for academic research. 

2007-03-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* Shoutbox.php: Allow limiting the number of characters entered for a shout.  
	(Ideally, this would also need to be enforced at db write level).   
	Move the shout form in the list.
	Allow choosing the number of shouts displayed.
	Make the size of the shout field configurable from the admin interface
	Put the date of the shout before the username.
	* User.php:  Make the entire "edit profile" link CSS targetable, including the parentesis.

2007-03-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* ProfileTemplateField.php:  Only allow simple content types as metadata.
	* Langstring.php:  Fix bug:  one couldn't change the language of a string without changing the actual text.
	* Content.php:  Add isExactContentType() method.
	* Profile-related visual and UI tweaks

2007-03-20 Benoit Grégoire  <bock@step.polymtl.ca>
	* Fix #304:  For some reason the Smarty assignement to userName used getListUI() instead of getUsername()???
	* Add HyperLink content type
	* Add UIUserList content type (work towards #158)
	* portal/index.php:  Finish refactoring Smarty usage.
	
2007-03-17 Benoit Grégoire  <bock@step.polymtl.ca>
	* install.php: Make sure we are in the right directory when uncompressing Smarty
	* Avatar.php:  Don't allow user to hyperlink the image.