@@ -53,13 +53,13 @@
         <div class="tool_user_info">
                 {if $userIsValid}
                     <div>{"Logged in as"|_}: {$userListUI}</div>
-                    <a class="administration" href="{$base_ssl_path}admin/generic_object_admin.php?object_id={$userId}&object_class=User&action=edit"><img class="administration" src="{$common_images_url}profile.gif">&nbsp;{"Preferences"|_}</a>
-                    <a class="administration" href="{$base_ssl_path}login/?logout=true{$logoutParameters}"><img class="administration" src="{$common_images_url}logout.gif">&nbsp;{"Logout"|_}</a>
+                    <a id="preferences_link" href="{$base_ssl_path}admin/generic_object_admin.php?object_id={$userId}&object_class=User&action=edit"><img src="{$common_images_url}profile.gif">&nbsp;{"Preferences"|_}</a>
+                    <a id="logout_link" href="{$base_ssl_path}login/?logout=true{$logoutParameters}"><img src="{$common_images_url}logout.gif">&nbsp;{"Logout"|_}</a>
                 {else}
 					{if !$shrinkLeftArea}
                     <p>
                         {"I am not logged in."|_}<br>
-                        <a href="{$base_ssl_path}login/{$loginParameters}">{"Login"|_}</a>
+                        <a id="login_link" href="{$base_ssl_path}login/{$loginParameters}">{"Login"|_}</a>
                     </p>
 					{/if}
                 {/if}
